[project]
name = "parkhier"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gilbert Röhrbein", email = "payload.git@mailbox.org" }
]
dependencies = [
    "fastapi>=0.110.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
parkhier-fetch = 'parkhier:main_fetch'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "uvicorn>=0.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/parkhier"]
